k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-gitops-api-svc
spec:
  selector:
    app: my-gitops-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
